<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Portu-go</string>
    <string name="available_not" tools:ignore="UnusedResources">Not available</string>
    <string name="loading">Loading</string>
    <string name="bemvindo">Bem Vindo</string>
    <string name="install_tts">Install TTS</string>
    <string name="retry" tools:ignore="UnusedResources">Retry</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="essential">Essential</string>
    <string name="verbs">Verbs</string>
    <string name="past">Past</string>
    <string name="present">Present</string>
    <string name="future">Future</string>

    <string name="pt_i">Eu</string>
    <string name="pt_you">Tu</string>
    <string name="pt_heshe">Ele/Ela/Vocé</string>
    <string name="pt_we">Nós</string>
    <string name="pt_they" tools:ignore="Typos">Eles/Elas/Vocés</string>

    <string name="en_i">I</string>
    <string name="en_you">You</string>
    <string name="en_heshe">He/She/It</string>
    <string name="en_we">We</string>
    <string name="en_they">They</string>
    <string name="press_a_word_to_listen">Press a word to listen</string>

    <string name="sample1">Sample One</string>
    <string name="sample2">Sample Two</string>
    <string name="sample3">Sample Three</string>
    <string name="quiz">Quiz</string>
    <string name="question">Question</string>
    <string name="skip">Skip</string>
    <string name="score">Score</string>
    <string name="noverbsavail">No verbs available</string>
    <string name="close_quiz">Close Quiz</string>
    <string name="your_score">Your score was</string>
    <string name="oncompletemsg_exclam">Parabens!</string>
    <string name="audio_unavail">Audio (TTS) not available</string>
    <string name="pleasewait">Please wait</string>
    <string name="audio">Audio</string>
    <string name="app_needs_tts">This app requires Text-To-Speech (TTS) functionality for the full user experience.  \n\nPlease select the option below to install the Android TTS Portuguese Engine.</string>
    <string name="connectivity">Connectivity</string>
    <string name="learning" tools:keep="@string/learning">Learning</string>
    <string name="connection_friendly_msg">An internet connection is required at this time.  \n\nPlease enable and retry.</string>
    <string name="quiz_learn_friendly_msg">Perhaps you should do some learning first my friend.</string>

    <string name="quizresult_bestscore">You have a new BEST score.  Excellent work!</string>
    <string name="quizresult_improved">That was an improvement on last time. \nMuito bem!</string>
    <string name="quizresult_zero">Looks like you need more study my friend.</string>
    <string name="quizresult_gwork">Muito bem!</string>
    <string name="play_verb">Play verb</string>
    <string name="learn_some_stuff">Learn some stuff</string>
    <string name="quiz_myself">Quiz myself</string>
    <string name="examples">Examples</string>
    <string name="sample">Sample</string>
    <string name="what_can_you_hear">What can you hear?</string>
    <string name="message">Message</string>
    <string name="answer">Answer</string>
    <string name="check">Check</string>
    <string name="_0">0</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="study">Study</string>
    <string name="irregular_suffix">(irr)</string>
    <string name="no_samples_avail">No samples available</string>

</resources>
