<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_quizcard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="6dp"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite"
    card_view:cardElevation="@dimen/card_elevation"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/layout_vert_quizgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_quiz_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textSize="@dimen/text_size_question"
                android:gravity="center"
                android:textColor="@color/colorVerbItem_pt"
                android:text="@string/what_can_you_hear" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ib_listen"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:padding="3dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_verb"
                    app:srcCompat="@drawable/ic_play_circle_filled_green_24dp"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/tv_quiz_resultmsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_margin"
                    android:textSize="@dimen/text_size_mid"
                    android:textColor="@color/colorVerbItem_pt"
                    android:visibility="invisible"
                    android:text="@string/message" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/etAnswerInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/answer"
                    android:text="" />

                <TextView
                    android:id="@+id/tv_quiz_correctanswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_mid"
                    android:textColor="@color/colorVerbItem_pt"
                    android:visibility="invisible"
                    android:text="Correct Answer"
                    tools:ignore="HardcodedText" />


            </FrameLayout>


            <Button
                android:id="@+id/btn_quiz_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rounded_inverted"
                android:padding="15dp"
                android:text="@string/check"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
