<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_learnmain_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.activity.LearnVerbActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_learnverb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_collap_learnverb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorAccent"
            app:title="ABCDEFGHIJKLMNOP"
            app:titleEnabled="true"
            app:expandedTitleGravity="center_horizontal|top"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:collapsedTitleGravity="left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar_learnverb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:clipChildren="false">

                <LinearLayout
                    android:id="@+id/layout_toucharea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_holder_y_offset"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_learnverb_verb_en"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_mid"
                        android:text="Verb EN"
                        android:layout_weight="1"
                        android:paddingBottom="10dp"
                        android:gravity = "center"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:scaleType="center"
                        android:layout_weight="1"
                        android:src="@drawable/outline_play_circle_filled_white_24"
                        android:contentDescription="@string/play_verb" />

                    <TextView
                        android:id="@+id/tv_learnverb_verb_phonetic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Phonetic"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="1"
                        android:paddingBottom="10dp"
                        android:textSize="@dimen/text_size_mid"
                        tools:ignore="HardcodedText" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryLighter"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_learnverb_prespart_pt"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorVerbItem_pt"
                            android:textSize="@dimen/text_size_card"
                            android:layout_weight="1"
                            android:text="PT"
                            android:gravity = "center|center_vertical"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/tv_learnverb_prespart_en"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorVerbItem_en"
                            android:textSize="@dimen/text_size_card"
                            android:layout_weight="1"
                            android:text="EN"
                            android:layout_gravity="start"
                            android:gravity = "center|center_vertical"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_learnverb_pastpart_pt"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorVerbItem_pt"
                            android:textSize="@dimen/text_size_card"
                            android:layout_weight="1"
                            android:text="PT"
                            android:gravity = "center|center_vertical"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/tv_learnverb_pastpart_en"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorVerbItem_en"
                            android:textSize="@dimen/text_size_card"
                            android:layout_weight="1"
                            android:text="EN"
                            android:layout_gravity="start"
                            android:gravity = "center|center_vertical"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_learnverb"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:gravity="center_vertical"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <!--app:layout_scrollFlags="scroll|enterAlways"-->
                <!--app:layout_collapseMode="pin"-->

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_learnverb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="snap">
            <!--app:layout_scrollFlags="scroll|enterAlways|snap"-->

            <android.support.design.widget.TabItem
                android:id="@+id/tab_learnverb_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_learnverb_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_learnverb_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_learnverb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_learnverb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_gravity="end|bottom"
        app:fabSize="normal"
        app:borderWidth="0dp"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/outline_visibility_white_24"
        android:layout_marginRight="@dimen/fab_margin" />

</android.support.design.widget.CoordinatorLayout>